syntax = "proto3";

package proto;

import "image.proto";
import "msg.proto";

message PullImageRequest {
    repeated Image images = 1;
    RegistryAuth registryAuth = 2;
}

service Caplet {
    rpc PullImage (PullImageRequest) returns (stream ChunkMessage) {
    }
}
