syntax = "proto3";

package tw.com.softleader.captainkube;

message PruneRequest {
    bool verbose = 1;
    int64 timeout = 2;
    bool color = 3;
}